JP GENERATION - GDPR + COOKIES

--- a/plne-responzivny-web/jpgeneration/gdpr.html
+++ b/plne-responzivny-web/jpgeneration/gdpr.html
@@ -5,13 +5,18 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -89,7 +94,7 @@
     </div>
 </section>
 <!-------------ZACIATOK CONTENTU-------------->
-<section class="services">
+<section class="services-gdpr">
     <header class="headline-con">
         <div class="con-main">
             <div class="line-con1"></div>
@@ -98,251 +103,159 @@
         <h2>Zásady ochrany osobných údajov</h2>
     </header>
     <div class="con-look">
-        <span>Dátum nadobudnutia účinnosti: 20.01.2023</span>
+        <span>Posledná aktualizácia 25. mája 2023</span>
+        <br>
+        <span>Dátum účinnosti 26. mája 2023</span>
     </div>
 </section>
-<section>
-    <h1 class="privacy-policy-h1">Privacy Policy
-        <br><span>Last Updated On 25-May-2023</span>
-        <br><span>Effective Date 26-May-2023</span>
-    </h1>
-
+<section class="gdpr">
     <p class="privacy-policy-p">
-        This Privacy Policy describes the policies of
-
-        JP GENERATION,
-        Matice Slovenskej 4,
-        Prešov
-        08001,
-        Slovakia,
-        email: jaroslav.potoc@gmail.com,
-        phone: 0907112358
-
-        on the collection,
-        use and disclosure of your information that we collect
-        when you use our website ( https://www.testjpgeneration.sk ).
-        (the “Service”). By accessing or using
-        the
-        Service, you are consenting to the collection, use and
-        disclosure of your information in accordance with this
-        Privacy Policy. If you do not consent to the same,
-        please do not access or use the Service.
+        Tieto zásady ochrany osobných údajov popisujú zásady spoločnosti:
+        <br>
+        <br>
+        JP GENERATION,<br>
+        Matice Slovenskej 4,<br>
+        Prešov 08001,<br>
+        Slovensko,<br>
+        e-mail: jaroslav.potoc@gmail.com,<br>
+        telefón: 0907112358<br>
+        <br>
+        o zhromažďovaní, používaní a zverejňovaní vašich údajov, ktoré zhromažďujeme, keď používate našu webovú stránku.
+        ( https://www.testjpgeneration.sk ). (služba&quot;). Prístupom alebo používaním Služby vyjadrujete súhlas so
+        zhromažďovaním, používaním a zverejňovaním vašich informácií v súlade s týmito Zásadami ochrany osobných údajov.
+        Ak s tým nesúhlasíte, nepristupujte k Službe ani ju nepoužívajte.
     </p>
-
+    <br>
     <p class="privacy-policy-p">
-        We may modify this Privacy Policy at any time without
-        any prior notice to you and will post the revised
-        Privacy Policy on the Service. The revised Policy will
-        be effective 180 days from when the
-        revised Policy is posted in the Service and your
-        continued access or use of the Service after such time
-        will constitute your acceptance of the revised Privacy
-        Policy. We therefore recommend that you periodically
-        review this page.
+        Tieto Zásady ochrany osobných údajov môžeme kedykoľvek upraviť bez akéhokoľvek predchádzajúceho upozornenia a
+        revidované Zásady ochrany osobných údajov zverejníme v službe. Revidované Zásady nadobudnú účinnosť 180 dní od
+        ich zverejnenia v Službe a váš pokračujúci prístup k Službe alebo jej používanie po tomto čase bude znamenať váš
+        súhlas s revidovanými Zásadami ochrany osobných údajov. Odporúčame vám preto pravidelne kontrolovať túto
+        stránku.
     </p>
-
+    <br>
     <ol class="privacy-policy-ol">
-        <li>
+
             <h2 class="privacy-policy-h2">
-                Information We Collect:
-            </h2>
-
-
-            <p class="privacy-policy-p">
-                We will collect and process the following
-                personal information about you:
-            </p>
-            <ol class="privacy-policy-ol">
-
-                <li>Name</li>
-
-                <li>Email</li>
-
-                <li>Mobile</li>
-
-
-
-
-
-
-
-            </ol>
-
-
-
-
-        </li>
-
-
-
-
-        <li>
-            <h2 class="privacy-policy-h2">
-                How We Use Your Information:
+                1. Informácie, ktoré zhromažďujeme:
             </h2>
             <p class="privacy-policy-p">
-                We will use the information that we collect
-                about you for the following purposes:
+                Budeme o vás zhromažďovať a spracovávať nasledujúce osobné údaje:
             </p>
-            <ol class="privacy-policy-ol">
-
-                <li>Marketing/ Promotional</li>
-
-
-
-
-
-
-
-
-                <li>Targeted advertising</li>
-
-                <li>Manage customer order</li>
-
-
-
-
-
-            </ol>
-            <p class="privacy-policy-p">
-                If we want to use your information for any other
-                purpose, we will ask you for consent and will
-                use your information only on receiving your
-                consent and then, only for the purpose(s) for
-                which grant consent unless we are required to do
-                otherwise by law.
-            </p>
-        </li>
-
-
-
-        <li>
+        <ol class="privacy-policy-ol">
+            <li>Meno</li>
+            <li>E-mail</li>
+            <li>Telefóne číslo</li>
+        </ol>
+        <br>
             <h2 class="privacy-policy-h2">
-                Retention Of Your Information:
+                2. Ako používame vaše informácie:
             </h2>
             <p class="privacy-policy-p">
-                We will retain your personal information with us
-                for
-                90 days to 2 years after users terminate their accounts
-                or for as
-                long as we need it to fulfill the purposes for
-                which it was collected as detailed in this
-                Privacy Policy. We may need to retain certain
-                information for longer periods such as
-                record-keeping / reporting in accordance with
-                applicable law or for other legitimate reasons
-                like enforcement of legal rights, fraud
-                prevention, etc. Residual anonymous information
-                and aggregate information, neither of which
-                identifies you (directly or indirectly), may be
-                stored indefinitely.
+                Informácie, ktoré o vás zhromažďujeme, použijeme na nasledujúce účely:
             </p>
-        </li>
-
-        <li>
+        <ol class="privacy-policy-ol">
+            <li>Marketing / Propagačné</li>
+            <li>Cielená reklama</li>
+            <li>Spravovať objednávku zákazníka</li>
+            <br>
+        </ol>
+            <p class="privacy-policy-p">
+                Ak chceme použiť vaše údaje na akýkoľvek iný účel, požiadame vás o súhlas a použijeme vaše údaje len po
+                získaní vášho súhlasu a potom iba na účely, na ktoré súhlas udeľujete, pokiaľ od nás nebude vyžadované
+                inak. zákona.
+            </p>
+        <br>
             <h2 class="privacy-policy-h2">
-                Your Rights:
+                3. Uchovávanie vašich informácií:
             </h2>
             <p class="privacy-policy-p">
-                Depending on the law that applies, you may have
-                a right to access and rectify or erase your
-                personal data or receive a copy of your personal
-                data, restrict or object to the active
-                processing of your data, ask us to share (port)
-                your personal information to another entity,
-                withdraw any consent you provided to us to
-                process your data, a right to lodge a complaint
-                with a statutory authority and such other rights
-                as may be relevant under applicable laws. To
-                exercise these rights, you can write to us at
-                jaroslav.potoc@gmail.com.
-                We will respond to your
-                request in accordance with applicable law.
+                Vaše osobné údaje budeme uchovávať 90 dní až 2 roky po tom, čo používatelia ukončia svoje účty, alebo
+                tak dlho, ako ich budeme potrebovať na splnenie účelov, na ktoré boli zhromaždené, ako je podrobne
+                uvedené v týchto zásadách ochrany osobných údajov. Môže sa stať, že budeme musieť uchovávať určité
+                informácie na dlhšie obdobia, ako je napríklad vedenie záznamov/hlásení v súlade s platnými zákonmi
+                alebo z iných legitímnych dôvodov, ako je presadzovanie zákonných práv, predchádzanie podvodom atď.
+                Zvyškové anonymné informácie a súhrnné informácie, z ktorých vás ani jeden neidentifikuje
+                (priamo alebo nepriamo), môžu byť uložené na dobu neurčitú.
             </p>
-
-            <p class="privacy-policy-p">
-                You may opt-out of direct marketing
-                communications or the profiling we carry out for
-                marketing purposes by writing to us at
-                jaroslav.potoc@gmail.com.
-            </p>
-
-            <p class="privacy-policy-p">
-                Do note that if you do not allow us to collect
-                or process the required personal information or
-                withdraw the consent to process the same for the
-                required purposes, you may not be able to access
-                or use the services for which your information
-                was sought.
-            </p>
-        </li>
-        <li>
+        <br>
             <h2 class="privacy-policy-h2">
-                Cookies Etc.
+                4. Vaše práva:
             </h2>
             <p class="privacy-policy-p">
-
-
-                To learn more about how we use these
-                and your choices in relation to these tracking
-                technologies, please refer to our
-                <a href="https://www.testjpgeneration.sk">Cookie Policy.</a>
+                V závislosti od platného zákona môžete mať právo na prístup k svojim osobným údajom a ich opravu alebo
+                vymazanie alebo môžete získať kópiu svojich osobných údajov, obmedziť alebo namietať proti aktívnemu
+                spracúvaniu vašich údajov, požiadať nás o zdieľanie (prenos) vašich osobných údajov informácie inému
+                subjektu, odvolať akýkoľvek súhlas, ktorý ste nám poskytli so spracovaním vašich údajov, právo podať
+                sťažnosť zákonnému orgánu a ďalšie práva, ktoré môžu byť relevantné podľa platných zákonov. Na
+                uplatnenie
+                týchto práv nám môžete napísať na adresu jaroslav.potoc@gmail.com. Na vašu žiadosť odpovieme v súlade s
+                platnými právnymi predpismi.
             </p>
-        </li>
-
-        <li>
+            <p class="privacy-policy-p">
+                Môžete sa odhlásiť z priamej marketingovej komunikácie alebo z profilovania, ktoré vykonávame na
+                marketingové účely, ak nám napíšete na adresu jaroslav.potoc@gmail.com.
+            </p>
+            <p class="privacy-policy-p">
+                Upozorňujeme, že ak nám nedovolíte zhromažďovať alebo spracovávať požadované osobné údaje alebo ak
+                odvoláte súhlas s ich spracovaním na požadované účely, možno nebudete môcť pristupovať k službám,
+                pre ktoré boli vaše informácie požadované, alebo ich používať.
+            </p>
+        <br>
             <h2 class="privacy-policy-h2">
-                Security:
+                5. Súbory cookie atď.
+            </h2>
+        <p class="privacy-policy-p">
+            Ak sa chcete dozvedieť viac o tom, ako používame tieto a vaše voľby v súvislosti s týmito technológiami
+            sledovania, pozrite si naše
+            <a class="text-link" href="cookie.html">Zásady používania súborov cookie.</a>
+        </p>
+        <br>
+            <h2 class="privacy-policy-h2">
+                6. Zabezpečenie:
             </h2>
             <p class="privacy-policy-p">
-                The security of your information is important to
-                us and we will use reasonable security measures
-                to prevent the loss, misuse or unauthorized
-                alteration of your information under our
-                control. However, given the inherent risks, we
-                cannot guarantee absolute security and
-                consequently, we cannot ensure or warrant the
-                security of any information you transmit to us
-                and you do so at your own risk.
+                Bezpečnosť vašich údajov je pre nás dôležitá a použijeme primerané bezpečnostné opatrenia, aby sme
+                zabránili strate, zneužitiu alebo neoprávnenej zmene vašich údajov pod našou kontrolou. Avšak vzhľadom
+                na prirodzené riziká nemôžeme zaručiť absolútnu bezpečnosť, a preto nemôžeme zabezpečiť ani zaručiť
+                bezpečnosť akýchkoľvek informácií, ktoré nám prenášate, a robíte tak na vlastné riziko.
             </p>
-        </li>
-
-        <li>
+        <br>
             <h2 class="privacy-policy-h2">
-                Third Party Links & Use Of Your Information:
+                7. Odkazy na tretie strany a použitie vašich informácií:
             </h2>
             <p class="privacy-policy-p">
-                Our Service may contain links to other websites
-                that are not operated by us. This Privacy Policy
-                does not address the privacy policy and other
-                practices of any third parties, including any
-                third party operating any website or service
-                that may be accessible via a link on the
-                Service. We strongly advise you to review the
-                privacy policy of every site you visit. We have
-                no control over and assume no responsibility for
-                the content, privacy policies or practices of
-                any third party sites or services.
+                Naša služba môže obsahovať odkazy na iné webové stránky
+                Ktoré nie sú ovládané nami. Táto politika ochrany súkromia
+                Nezaoberá sa politikou ochrany súkromia a inými
+                Postupy akýchkoľvek tretích strán vrátane akýchkoľvek
+                Tretia strana prevádzkujúca akúkoľvek internetovú stránku alebo službu
+                Ktoré môžu byť prístupné prostredníctvom prepojenia na internetovej stránke:
+                Obsluha. Dôrazne vám odporúčame, aby ste preskúmali
+                Politika ochrany súkromia na každej stránke, ktorú navštíviš. Máme
+                Žiadna kontrola a žiadna zodpovednosť.
+                Obsah, politiky alebo postupy ochrany súkromia
+                Akékoľvek tretie stránky alebo služby.
             </p>
-        </li>
-
-        <li>
+        <br>
             <h2 class="privacy-policy-h2">
-                Grievance / Data Protection Officer:
+                8. Úradník pre ochranu sťažností / údajov:
             </h2>
             <p class="privacy-policy-p">
-                If you have any queries or concerns about the
-                processing of your information that is available
-                with us, you may email our Grievance Officer at
-                JP GENERATION,
-                Matice Slovenskej 4,
-                email: jaroslav.potoc@gmail.com.
-                We will address your concerns in accordance with applicable law.
+                Ak máte akékoľvek otázky alebo obavy týkajúce sa
+                Spracovanie vašich dostupných informácií
+                S nami môžete poslať e-mail nášmu úradníkovi pre sťažnosti na:
+                Generácia JP,
+                Matice Slovenská 4,
+                E-mail: Jaroslav.potoc @ gmail.com.
+                Vaše obavy vyriešime v súlade s platným právom.
             </p>
-        </li>
+        <br>
     </ol>
     <p class="privacy-policy-p">
-        Privacy Policy generated with  <a target="_blank" href="https://www.cookieyes.com/?utm_source=PP&utm_medium=footer&utm_campaign=UW">CookieYes</a>.
+        Politika ochrany súkromia vytvorená <a class="text-link"
+                                               href="https://www.cookieyes.com/?utm_source=PP&utm_medium=footer&utm_campaign=UW"
+                                               target="_blank">CookieYes</a>.
     </p>
 </section>
 <br>
