--- a/plne-responzivny-web/jpgeneration/cookie.html
+++ b/plne-responzivny-web/jpgeneration/cookie.html
@@ -145,7 +145,7 @@
     &nbsp;
     <h2>Spravovať preferencie cookie</h2>
     <button class="port-btn">
-        <a class="port-txt">Cookie Nastavenia</a>
+        <a class="cky-banner-element"><span class="port-txt">Cookie Nastavenia</span></a>
     </button>
     <br/>
     <br/>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+                    <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
 
             </div>
@@ -302,7 +302,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:jaroslavpotocny@icloud.com">
+                    <a href="mailto:info@jpgeneration.sk">
                         <span></span>
                         <span></span>
                         <span></span>
