--- a/plne-responzivny-web/jpgeneration/error/403.html
+++ b/plne-responzivny-web/jpgeneration/error/403.html
@@ -181,7 +181,7 @@
         </div>
         <div class="fot-text">
           <i aria-hidden="true" class="fa fa-envelope-o"></i>
-          <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+          <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
         </div>
 
       </div>
@@ -228,7 +228,7 @@
           </a>
         </li>
         <li>
-          <a href="mailto:jaroslavpotocny@icloud.com">
+          <a href="mailto:info@jpgeneration.sk">
             <span></span>
             <span></span>
             <span></span>
