JP GENERATION - START BUILDING PRICE LIST

--- a/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
@@ -105,6 +105,56 @@
     <div class="con-look">
         <span>Cena za vašu foto produkciu</span>
     </div>
+    <section class="content-price-1">
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p>Minimálna objednavka 10ks</p>
+            <p>Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div>
+                <a href="">12€ / fotka alebo 60€ / hod.</a>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p>Minimálna objednavka 10ks</p>
+            <p>Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div>
+                <a href="">12€ / fotka alebo 60€ / hod.</a>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div>
+                <a href="">12€ / fotka alebo 60€ / hod.</a>
+            </div>
+        </div>
+    </section>
 </section>
 <br>
 <br>
