--- a/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
@@ -108,8 +108,8 @@
     <section class="content-price-1">
         <div>
             <h2>Produktové fotenite (v atelieri)</h2>
-            <p>Minimálna objednavka 10ks</p>
-            <p>Balík obsahuje:</p>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
                 <li class="price-text">Profesionálne nastavenie</li>
@@ -118,24 +118,8 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div>
-                <a href="">12€ / fotka alebo 60€ / hod.</a>
-            </div>
-        </div>
-        <div>
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p>Minimálna objednavka 10ks</p>
-            <p>Balík obsahuje:</p>
-            <hr>
-            <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
-            </ul>
-            <div>
-                <a href="">12€ / fotka alebo 60€ / hod.</a>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
         <div>
@@ -150,8 +134,224 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div>
-                <a href="">12€ / fotka alebo 60€ / hod.</a>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-3">
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-2">
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-4">
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-5">
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Produktové fotenite (v atelieri)</h2>
+            <p class="min-order">Minimálna objednavka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price">
+                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
     </section>
