JP GENERATION - START BUILDING PRICE LIST

--- a/plne-responzivny-web/jpgeneration/cookie.html
+++ b/plne-responzivny-web/jpgeneration/cookie.html
@@ -113,14 +113,17 @@
     <h2>Čo sú to cookies?</h2>
     <div class="cookie-policy-p">
         <p class="privacy-policy-p">Táto politika v oblasti cookies vysvetľuje, čo sú cookies a ako ich používame,
-            Cookies, ktoré používame, t. j. informácie, ktoré zbierame pomocou cookies a ako sa tieto informácie používajú, a ako
+            Cookies, ktoré používame, t. j. informácie, ktoré zbierame pomocou cookies a ako sa tieto informácie
+            používajú, a ako
             Riadenie
             Nastavenie cookie.
         </p>
         <p class="privacy-policy-p">Cookies sú malé textové súbory, ktoré sa používajú na uchovávanie malých informácií.
             Sú uložené na Vašom
-            Zariadenie, keď sa webová stránka načíta do vášho prehliadača. Tieto cookies nám pomáhajú správne fungovať webové stránky,
-            Posilniť jej bezpečnosť, poskytnúť lepšie skúsenosti s používateľmi a pochopiť fungovanie webovej stránky a analyzovať ju
+            Zariadenie, keď sa webová stránka načíta do vášho prehliadača. Tieto cookies nám pomáhajú správne fungovať
+            webové stránky,
+            Posilniť jej bezpečnosť, poskytnúť lepšie skúsenosti s používateľmi a pochopiť fungovanie webovej stránky a
+            analyzovať ju
             Čo funguje a kde potrebuje zlepšenie.
         </p>
     </div>
@@ -131,9 +134,11 @@
         cookies prvej a tretej strany
         Z niekoľkých dôvodov. Cookies na prvú párty sú väčšinou potrebné na to, aby webová stránka fungovala správne, a
         Nezbierajú žiadne z vašich osobne identifikovateľných údajov.</p>
-        <p class="privacy-policy-p">Cookies tretích strán používané na našej webovej stránke slúžia hlavne na pochopenie, ako
+        <p class="privacy-policy-p">Cookies tretích strán používané na našej webovej stránke slúžia hlavne na
+            pochopenie, ako
             Internetová stránka, ako
-            Komunikujte s našimi webovými stránkami, udržiavajte naše služby bezpečné, poskytujte reklamy, ktoré sú pre vás relevantné,
+            Komunikujte s našimi webovými stránkami, udržiavajte naše služby bezpečné, poskytujte reklamy, ktoré sú pre
+            vás relevantné,
             A celkovo vám poskytujú lepšie a lepšie skúsenosti s používateľmi a pomáhajú urýchliť vašu budúcnosť.
             Interakcie s našou webovou stránkou.</p></div>
 
@@ -150,13 +155,16 @@
     <br/>
     <br/>
 
-    <div><p class="privacy-policy-p">Vaše preferencie na cookie môžete kedykoľvek zmeniť kliknutím na vyššie uvedené tlačidlo. Toto
+    <div><p class="privacy-policy-p">Vaše preferencie na cookie môžete kedykoľvek zmeniť kliknutím na vyššie uvedené
+        tlačidlo. Toto
         Dovoľte vám prehodnotiť
         Nápis súhlas cookie a zmeniť vaše preferencie alebo odvolať súhlas hneď.</p>
         <p class="privacy-policy-p">Okrem toho rôzne prehľadávače poskytujú rôzne metódy blokovania a
             Odstráňte sušienky použité
-            Webové stránky. Môžete zmeniť nastavenie svojho prehľadávača, aby ste zablokovali / odstránili cookies. Nižšie sú uvedené
-            Odkazy na podporné dokumenty o spôsobe riadenia a odstraňovania cookies z hlavných webových prehliadačov.</p>
+            Webové stránky. Môžete zmeniť nastavenie svojho prehľadávača, aby ste zablokovali / odstránili cookies.
+            Nižšie sú uvedené
+            Odkazy na podporné dokumenty o spôsobe riadenia a odstraňovania cookies z hlavných webových
+            prehliadačov.</p>
         <p class="privacy-policy-p">Chrome: <a class="text-link" href="https://support.google.com/accounts/answer/32050"
                                                target="_blank">https://support.google.com/accounts/answer/32050</a>
         </p>
@@ -172,15 +180,16 @@
                                                           href="https://support.microsoft.com/en-us/topic/how-to-delete-cookie-files-in-internet-explorer-bca9446f-d873-78de-77ba-d42645fa52fc"
                                                           target="_blank">https://support.microsoft.com/en-us/topic/how-to-delete-cookie-files-in-internet-explorer-bca9446f-d873-78de-77ba-d42645fa52fc</a>
         </p>
-        <p class="privacy-policy-p">Ak používate iný internetový prehľadávač, navštívte oficiálnu podporu vášho prehľadávača.
+        <p class="privacy-policy-p">Ak používate iný internetový prehľadávač, navštívte oficiálnu podporu vášho
+            prehľadávača.
             Dokumenty.</p></div>
 
 
     &nbsp;
     <p class="privacy-policy-p">
         Politika Cookie vytvorená <a class="text-link"
-                                      href="https://www.cookieyes.com/?utm_source=CP&utm_medium=footer&utm_campaign=UW"
-                                      target="_blank">CookieYes
+                                     href="https://www.cookieyes.com/?utm_source=CP&utm_medium=footer&utm_campaign=UW"
+                                     target="_blank">CookieYes
         - Generátor politiky cookie</a>.
     </p>
 </section>
