--- a/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
@@ -5,13 +5,18 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -98,7 +103,8 @@
         <h2>Cenník - Foto produkcia</h2>
         <div class="services-btn">
             <button class="port-btn">
-                <a class="port-txt" href="../kontakt.html">Mám záujem <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                <a class="port-txt" href="../kontakt.html">Mám záujem <i aria-hidden="true"
+                                                                         class="fa fa-long-arrow-right"></i></a>
             </button>
         </div>
     </header>
