--- a/plne-responzivny-web/jpgeneration/portfolio/video.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/video.html
@@ -5,13 +5,18 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -105,10 +110,16 @@
     <div class="video-row">
 
         <div class="video-column">
-            <iframe src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
+                    frameborder="0"
+                    src="https://www.youtube-nocookie.com/embed/A8Ogdxi-EQ0"
+                    title="YouTube video player"></iframe>
         </div>
         <div class="video-column">
-            <iframe  src="https://www.youtube-nocookie.com/embed/F3asDg68raw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
+                    frameborder="0"
+                    src="https://www.youtube-nocookie.com/embed/F3asDg68raw"
+                    title="YouTube video player"></iframe>
         </div>
 
     </div>
