JP GENERATION - START BUILDING PRICE LIST

--- a/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
@@ -112,9 +112,9 @@
         <span>Cena za vašu foto produkciu</span>
     </div>
     <section class="content-price-1">
-        <div>
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+        <div class="block-black">
+            <h2>Produktové fotenie (v atelieri)</h2>
+            <p class="min-order">Minimálna objednávka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
@@ -124,13 +124,13 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-gray">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
-        <div>
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+        <div class="block-gray">
+            <h2>PRODUKTOVÉ FOTENIE (MIMO ATELIÉR)</h2>
+            <p class="min-order">Minimálna objednávka 20ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
@@ -140,79 +140,84 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            <div class="btn-price-black">
+                <p class="price-eur">14€ / fotka alebo 90€ / hod.</p>
             </div>
         </div>
-        <div>
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+        <div class="block-black">
+            <h2>INTERIÉROVÉ FOTENIE</h2>
+            <span class="spacer-price-text"></span>
+            <p class="min-order">Minimálna objednávka 6ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Cesta v rámci PO zdarma</li>
+                <li class="price-text">Upráva interiéru pred fotením</li>
+                <li class="price-text">Postproduckia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
-            </div>
-        </div>
-    </section>
-    <section class="content-price-3">
-        <div>
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
-            <p class="order-text">Balík obsahuje:</p>
-            <hr>
-            <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
-            </ul>
-            <div class="btn-price">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
-            </div>
-        </div>
-        <div>
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
-            <p class="order-text">Balík obsahuje:</p>
-            <hr>
-            <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
-            </ul>
-            <div class="btn-price">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
-            </div>
-        </div>
-        <div>
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
-            <p class="order-text">Balík obsahuje:</p>
-            <hr>
-            <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
-            </ul>
-            <div class="btn-price">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+            <div class="btn-price-gray">
+                <p class="price-eur">18€ / fotka alebo 120€ / hod.</p>
             </div>
         </div>
     </section>
     <section class="content-price-2">
-        <div>
+        <div class="block-gray">
+            <h2>Firemná akcia <br> fotenie</h2>
+            <span class="spacer-price-text"></span>
+            <p class="min-order">2 hodiny</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Cesta v rámci PO zdarma</li>
+                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+                <span class="spacer-price-li"></span>
+                <span class="spacer-price-li"></span>
+            </ul>
+            <div class="btn-price-black">
+                <p class="price-eur">150€ + 70€ načatá hod.</p>
+            </div>
+        </div>
+        <div class="block-black">
+            <h2>Štúdiové fotenie portrétov (nekomerčné)</h2>
+            <p class="min-order">Minimálna objednávka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Fotenie v ateliéri</li>
+                <li class="price-text">Výber pozadia (biele, transparent…)</li>
+                <li class="price-text">Profesionálny retuš</li>
+                <li class="price-text">Postproduckia fotografií</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price-gray">
+                <p class="price-eur">15€ / fotka alebo 105€ / hod.</p>
+            </div>
+        </div>
+        <div class="block-gray">
+            <h2>Exterierové portrétove fotenie (nekomerčné)</h2>
+            <p class="min-order">Minimálna objednávka 10ks</p>
+            <p class="order-text">Balík obsahuje:</p>
+            <hr>
+            <ul class="price-info">
+                <li class="price-text">Fotenie v exteriéri určenom Vami</li>
+                <li class="price-text">Profesionálne nastavenie</li>
+                <li class="price-text">Profesionálny retuš</li>
+                <li class="price-text">Postproduckia fotografií</li>
+                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
+                <li class="price-text">Online dodanie fotiek</li>
+            </ul>
+            <div class="btn-price-black">
+                <p class="price-eur">13€ / fotka alebo 75€ / hod.</p>
+            </div>
+        </div>
+    </section>
+    <section class="content-price-3">
+        <div class="block-black">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -224,11 +229,11 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-gray">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
-        <div>
+        <div class="block-gray">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -240,11 +245,11 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-black">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
-        <div>
+        <div class="block-black">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -256,13 +261,13 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-gray">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
     </section>
     <section class="content-price-4">
-        <div>
+        <div class="block-gray">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -274,11 +279,11 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-black">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
-        <div>
+        <div class="block-black">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -290,11 +295,11 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-gray">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
-        <div>
+        <div class="block-gray">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -306,13 +311,13 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-black">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
     </section>
     <section class="content-price-5">
-        <div>
+        <div class="block-black">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -324,11 +329,11 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-gray">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
-        <div>
+        <div class="block-gray">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -340,11 +345,11 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-black">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
-        <div>
+        <div class="block-black">
             <h2>Produktové fotenite (v atelieri)</h2>
             <p class="min-order">Minimálna objednavka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
@@ -356,7 +361,7 @@
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
-            <div class="btn-price">
+            <div class="btn-price-gray">
                 <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
             </div>
         </div>
